Add missing Java options